--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+
+
+<nav>
+  <ul class="pagination">
+  <li class="page-item" *ngFor="let im of images;let i=index;">
+      <a class="page-link" href="">{{i.title}}</a>
+  </li>
+</ul>
+</nav>
