--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <nav>
   <ul class="pagination">
   <li class="page-item" *ngFor="let im of images;let i=index;">
-      <a class="page-link" href="">{{i.title}}</a>
+      <a class="page-link" href="{{im.url}}">{{i+1}}</a>
   </li>
 </ul>
 </nav>
