--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <nav>
   <ul class="pagination">
-  <li class="page-item" *ngFor="let im of images;let i=index;">
+    <li class="page-item" *ngFor="let im of images;let i=index;" [ngClass]="{active:i==currentPage}">
       <a class="page-link" href="{{im.url}}">{{i+1}}</a>
-  </li>
+    </li>
 </ul>
 </nav>
