--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,15 @@
 
 <nav>
   <ul class="pagination">
-    <li class="page-item" *ngFor="let im of images;let i=index;" [ngClass]="{active:i==currentPage}">
-      <a class="page-link" href="{{im.url}}">{{i+1}}</a>
+    <li class="page-item" [ngClass]="{disabled:currentPage==0}"><a class="page-link" href="" (click)="currentPage=currentPage-1"   >Prev</a> </li>
+    <li class="page-item" *ngFor="let im of images;let i=index;" [ngClass]="{active:i==currentPage} ">
+      <a class="page-link" (click)="currentPage=i">{{i+1}}</a>
     </li>
+    <li class="page-item" [ngClass]="{disabled:currentPage===images.length-1}"><a class="page-link" href="" (click)="currentPage=currentPage+1" >Next</a> </li>
 </ul>
 </nav>
+
+<div>
+  <h4>{{images[currentPage].title}}</h4>
+  <img [src]="images[currentPage].url" alt="">
+</div>
