2 files modified added my things

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,7 @@
 <div>
   <h4>{{images[currentPage].title}}</h4>
   <img [src]="images[currentPage].url" alt="">
+  <p>{{images[currentPage].content}}</p>
 </div>
+
+
