--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
 <nav>
   <ul class="pagination">
     <li class="page-item" [ngClass]="{disabled:currentPage==0}"><a class="page-link" href="" (click)="currentPage=currentPage-1"   >Prev</a> </li>
-    <li class="page-item" *ngFor="let im of images;let i=index;" [ngClass]="{active:i==currentPage} ">
-      <a class="page-link" (click)="currentPage=i">{{i+1}}</a>
-    </li>
+    <ng-container  *ngFor="let im of images;let i=index;">
+      <li class="page-item"  *ngIf="i<5" [ngClass]="{active:i==currentPage} ">
+          <a class="page-link" (click)="currentPage=i">{{i+1}}</a>
+  </li>
+    </ng-container>
     <li class="page-item" [ngClass]="{disabled:currentPage===images.length-1}"><a class="page-link" href="" (click)="currentPage=currentPage+1" >Next</a> </li>
 </ul>
 </nav>
